--- a/financial_management/.gitignore
+++ b/financial_management/.gitignore
@@ -34,4 +34,5 @@ build/
 
 # Ignore application properties (local configs)
 src/main/resources/application.properties
+# Ignore database files
 uploads/
