--- a/financial_management/.gitignore
+++ b/financial_management/.gitignore
@@ -35,4 +35,4 @@ build/
 # Ignore application properties (local configs)
 src/main/resources/application.properties
 # Ignore database files
-uploads/
+images/
