--- a/financial_management/pom.xml
+++ b/financial_management/pom.xml
@@ -127,6 +127,12 @@
     	</dependency>
 
 		<dependency>
+    		<groupId>com.itextpdf</groupId>
+    		<artifactId>itextpdf</artifactId>
+    		<version>5.5.13.3</version>
+		</dependency>
+
+		<dependency>
     		<groupId>com.microsoft.sqlserver</groupId>
     		<artifactId>mssql-jdbc</artifactId>
     		<version>12.6.1.jre11</version> <!-- tương thích JDK 11+ -->
